--- a/controle_pastoral/core/templates/base.html
+++ b/controle_pastoral/core/templates/base.html
@@ -1,6 +1,4 @@
 {% load staticfiles %}
-
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -22,33 +20,40 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">ToDo</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="{% url 'lista_categoria' %}">Categorias</a></li>
-          <li class="nav-item"><a class="nav-link" href="{% url 'nova_tarefa' %}">Tarefas</a></li>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-              <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{% if user.is_authenticated %}{{ user.get_full_name|default:user.username }} {% endif %}</a>
+              <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cadastro</a>
               <div class="dropdown-menu" aria-labelledby="dropdown01">
-                <a class="dropdown-item" href="{% url 'change_password' %}">Trocar Senha</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="{% url 'logout_user' %}">Sair</a>
+                <a class="dropdown-item" href="#">Crismando</a>
+                <a class="dropdown-item" href="#">Catequista</a>
               </div>
             </li>
           </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+              <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Controle</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown01">
+                <a class="dropdown-item" href="#">Encontro</a>
+                <a class="dropdown-item" href="#">Documentos</a>
+              </div>
+            </li>
+          </ul>
+
+  
+
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Login</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="#">Trocar Senha</a>
+              <a class="dropdown-item" href="#">Sair</a>
+            </div>
+          </li>
+        </ul>        
       </div>
     </nav>
 
