tela de cadastro de crismando

--- a/controle_pastoral/crismando/templates/crismando/main_crismando.html
+++ b/controle_pastoral/crismando/templates/crismando/main_crismando.html
@@ -22,7 +22,7 @@
 
     </div>
     <div>
-        <a href="{% url 'nova_categoria' %}" class="btn btn-default" role="button">Adicionar Categoria</a>
+        <a href="{% url 'novo_crismando' %}" class="btn btn-default" role="button">Adicionar Crismando</a>
     </div>
 
 
