--- a/controle_pastoral/crismando/templates/crismando/main_crismando.html
+++ b/controle_pastoral/crismando/templates/crismando/main_crismando.html
@@ -6,7 +6,8 @@
         <a href="{% url 'novo_crismando' %}" class="btn btn-default" role="button">Adicionar Crismando</a>
     </div>
     <div>
-        <div class="input-group mb-3">
+        <form class="input-group mb-3"  method="post">
+            {% csrf_token %}
             <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-default">Ano</span>
             </div>
@@ -14,9 +15,10 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-default">Nome</span>
             </div>           
-            <input class="input-text" id="input_nome" name="input_nome" type="text"> 
+            <input class="input-text" id="input_nome" name="input_nome" type="text">
+            <button class="btn btn-info" type='submit'>Filtrar</button>
         </div> 
-        <a href="{% url 'filtrar_crismando' %}" class="btn btn-info">Filtrar</a>    
+            
     </div>
     <div>
         <table class="table">
